# dgrep

./: .gitignore  Makefile  README.md  config.h  config.status  configure  configure.ac
src/: Makefile  Makefile.am  dgrep  main.cpp
src/.deps/: main.Po
src/client/: Makefile  Makefile.am  client.cpp  dgrep  ipaddress.txt
src/client/.deps/: client.Po
src/server/: Makefile  Makefile.am  dgrep_server  server.cpp
src/server/.deps/: server.Po
src/test/: Makefile.am
src/test/integration_test/: integration_test.sh
src/test/smoke_test/: smoke_test.sh
